--- a/app/packages/frontend/package.json
+++ b/app/packages/frontend/package.json
@@ -39,7 +39,8 @@
     "lodash": "4.17.20",
     "next": "^11.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "use-nft": "^0.9.0"
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.5",
